@@ -711,8 +711,8 @@ int main(
 
         if ((optarg != NULL) && !strcmp(optarg, "version"))
           {
-          fprintf(stderr, "version: %s\n",
-                  PACKAGE_VERSION);
+          fprintf(stderr, "Version: %s\nRevision: %s\n",
+            PACKAGE_VERSION, SVN_VERSION);
 
           exit(0);
           }
